cluster/apps/presidential-paradise/zookeeper/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-private
  namespace: presidential-paradise
spec:
  clusterIP: None
  ports:
  - name: epmd
    port: 4369
  selector:
    app: zookeeper
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: presidential-paradise
spec:
  ports:
  - name: http
    port: 8085
  selector:
    app: zookeeper
